<resources>
    <string name="app_name">Sudoku</string>

    <string name="fragment_keyboard_button_9">9</string>
    <string name="fragment_keyboard_button_8">8</string>
    <string name="fragment_keyboard_button_7">7</string>
    <string name="fragment_keyboard_button_6">6</string>
    <string name="fragment_keyboard_button_5">5</string>
    <string name="fragment_keyboard_button_4">4</string>
    <string name="fragment_keyboard_button_3">3</string>
    <string name="fragment_keyboard_button_2">2</string>
    <string name="fragment_keyboard_button_1">1</string>
    <string name="activity_board_game_text_level_string">Level:</string>
    <string name="fragment_cell_pencil_1">1</string>
    <string name="fragment_cell_pencil_2">2</string>
    <string name="fragment_cell_pencil_3">3</string>
    <string name="fragment_cell_pencil_4">4</string>
    <string name="fragment_cell_pencil_5">5</string>
    <string name="fragment_cell_pencil_6">6</string>
    <string name="fragment_cell_pencil_7">7</string>
    <string name="fragment_cell_pencil_8">8</string>
    <string name="fragment_cell_pencil_9">9</string>
    <string name="activity_board_game_pencil_text">pencil</string>
    <string name="activity_board_game_pen_text">pen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
