<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.ejemplos.sudoku.KeyboardFragment">

    <Button
        android:id="@+id/fragment_keyboard_button_1"
        android:text="@string/fragment_keyboard_button_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_keyboard_button_height"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/fragment_keyboard_button_2"
        android:text="@string/fragment_keyboard_button_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/fragment_keyboard_button_3"
        android:text="@string/fragment_keyboard_button_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/fragment_keyboard_button_4"
        android:text="@string/fragment_keyboard_button_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/fragment_keyboard_button_5"
        android:text="@string/fragment_keyboard_button_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/fragment_keyboard_button_6"
        android:text="@string/fragment_keyboard_button_6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fragment_keyboard_button_7"
        android:text="@string/fragment_keyboard_button_7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fragment_keyboard_button_8"
        android:text="@string/fragment_keyboard_button_8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fragment_keyboard_button_9"
        android:text="@string/fragment_keyboard_button_9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"/>

</LinearLayout>
